# parfis

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: build-and-gtestAll.yml  build-and-test.yml  main.yml  main_debug.yml  make_and_test.yml  python-tests.yml  run_cmake_locally.yml
cmake/: Utils.cmake  utils.cmake
cpp_test/: CMakeLists.txt  main.cpp  testAPI.cpp
data/config_files/: default.ini  gas_collisions.ini  test_api_configureSpecieFromFile.ini  test_physics_gasCollisionDefinition.ini
data/cross_sections/: simple_e.csv  simple_i.csv
data/svg/vscode_settings/win/: launch.json
data/vscode_settings/linux/: launch.json  settings.json  settings_2.json
data/vscode_settings/win/: settings.json
doc/doxygen/: Doxyfile  Doxyfile.in
doc/sphinx/: Makefile  conf.py.in  requirements.txt
doc/sphinx/source/: .htaccess  build.rst  conf.py  cpp.rst  cpp_api.rst  demo.rst  func_table.rst  index.rst  installation.rst  physics.rst  python_api.rst  sim_data.rst  workflow.rst
doc/sphinx/source/collisional_files/: gasCollisionDefinition.ini  generating_simple_cross_sections.ipynb
doc/sphinx/source/demo/: cells_cylindrical_demo.ipynb  simple_demo.ipynb
doc/sphinx/source/demo_files/: cells_cylindrical_demo.ipynb  move_cylindrical_demo.ipynb  move_cylindrical_demo.py  simple_demo.ipynb
doc/sphinx/source/img/: particle_memory.drawio
doc/sphinx/source/physics_files/: cylindrical_reflection.ipynb  scattering_after_collision.ipynb
docs/: .buildinfo  codedesign.html  cppsource.html  genindex.html  howto.html  index.html  index.md  inifile.html  jupyter.html  objects.inv  search.html  searchindex.js  testing.html
docs/_build/html/.doctrees/nbsphinx/ipynb/: collision-probability.html
docs/_build/html/ipynb/: collision-probability.html  collision-probability.ipynb
docs/_sources/: cppsource.rst.txt  howto.rst.txt  index.rst.txt  inifile.rst.txt  jupyter.rst.txt  testing.rst.txt
docs/_sources/ipynb/: collision-probability.ipynb.txt
docs/_static/: documentation_options.js
docs/_templates/: breadcrumbs.html
docs/ipynb/: collision-probability.html  collision-probability.ipynb
include/: global.h  info.h  parfis.h
include/parfis/: config.h  datastruct.h  global.h  parfis.h  particle.h  system.h  version.h
python-package/: MANIFEST.in  README.md  get_artifacts.py  setup.py  setup.py.in
python-package/parfis/clib/: __init__.py  datastruct.py  parfislib.py
python_test/: runAll.py  testApi.py  testTools.py
script/: buildDebug.sh  buildDebug32_64_and_gtestAll.sh  buildDebug32_64_buildGoogleTest_and_gtestAll.sh  buildDebug32_and_gtestAll.sh  buildDebug64.sh  buildDebugNoGtest32.sh  buildDebugNoGtest64.sh  buildDoc.sh  buildDocOnly.sh  buildDocOnly_noNBSphinx.sh  buildGoogletest.sh  buildParfis.sh  buildRelease.sh  buildRelease32_64.sh  buildRelease32_64_and_gtestAll.sh  buildReleaseAll64.sh  buildReleaseNoGtest32.sh  buildReleaseNoGtest3264.sh  buildReleaseNoGtest64.sh  buildRelease_installLocally_buildDoc.sh  generateDoc.sh  installParfisLocally.sh  installParfisLocally_and_runPythonTests.sh  parfisCondaEnv.yml  removeAllLogFiles.sh  removeBinFiles.sh  removeCMakeBuildFiles.sh  removeDocFiles.sh  removeLogFiles.sh  requirements.txt  runDebugGtestAll.sh  runPythonTests.sh  runReleaseGtestAll.sh
src/parfis/: config.cpp  datastruct.cpp  global.cpp  parfis.cpp  parfis.h  particle.cpp  system.cpp  system.h
src/parfisApp/: main.cpp
test/: CMakeLists.txt
test/cpp/: define.h  main.cpp  testAPI.cpp  testCAPI.cpp
test/gtest/: main.cpp  testAPI.cpp  testPhysics.cpp  testPyhiscs.cpp
test/pytest/: runAll.py  test01.py  testApi.py  testTools.py
test/src/: testCAPI.cpp
tests/cpp_test/: CMakeLists.txt
tests/python_test/: testTools.py
